1999-04-10  Greg McGary  <gkm@gnu.org>

	* walker.c (classify_link): Only return 0 for zero-length files.
	Keep directories, no matter what their size.  DOS always
	returns zero size for directories.
	[From tbisp@uswest.net]

1999-04-09  Greg McGary  <gkm@gnu.org>

	* po/Makefile.in.in (DISTFILES): Remove ChangeLog.
	* po/ChangeLog: Remove empty file.

1999-04-08  Greg McGary  <gkm@gnu.org>

	* libidu/idread.c (maybe_read_id_file): Add `b' for binary
	to fopen mode string.  [From tbisp@uswest.net]
	* src/lid.c (report_grep): Change name of gid_FILE to source_FILE.

	* src/mkid.c (write_id_file): Complain if fclose fails.
	[From jbb6@acpub.duke.edu]

	* src/lid.c (limits.h): Include earlier to avoid RE_DUP_MAX
	conflict. [From Erick.Branderhorst@asml.nl]
	(search_flinkv): Bash terminating newline.  [From marc@snafu.org]
	* lisp/elisp-comp: Import more recent version from automake.
	* libidu/scanners.c (SCAN_CPP_DIRECTIVE): Tolerate
	leading whitespace before first '#' [From rodneybrown@pmsc.com]
	(get_token_asm, get_token_c): Move some common leading context
	into SCAN_CPP_DIRECTIVE.

	* po/pl.po, po/nl.po: Add files.
	* configure.in (ALL_LINGUAS): Add pl & nl.

1999-04-06  Greg McGary  <gkm@gnu.org>

	* Version 3.2d released.

	* libidu/idfile.h (largest_member_file): Add variable decl.
	(MAX_LARGEST_MEMBER_FILE): Add constant.
	* libidu/scanners.h (scanner_buffer): Add variable decl.
	* libidu/scanners.c (scanner_buffer): Rename from id_0.
	* libidu/walker.c (largest_member_file): Add veriable defn.
	(walk_flink): Maintain largest_member_file.
	Call print_member_file.
	(maybe_get_member_file): Don't call print_member_file.
	(classify_link): Return 0 if file size is zero.
	* src/mkid.c (scan_files): Report size of largest file.
	Cap scanner_buffer size at MAX_LARGEST_MEMBER_FILE.
	Allocate scanner_buffer.
	* src/xtokid.c (scan_files): Cap scanner_buffer size at
	MAX_LARGEST_MEMBER_FILE.  Allocate scanner_buffer.

1999-04-04  Greg McGary  <gkm@gnu.org>
